add_library(pdcurses
  addch.c
  addchstr.c
  addstr.c
  border.c
  delch.c
  getstr.c
  initscr.c
  instr.c
  move.c
  panel.c
  scr_dump.c  
  terminfo.c
  attr.c
  clear.c
  deleteln.c
  getyx.c
  inopts.c
  kernel.c
  outopts.c
  printw.c
  scroll.c
  touch.c
  addch.c
  beep.c
  color.c
  deprec.c
  inch.c
  insch.c
  keyname.c
  overlay.c
  refresh.c
  slk.c
  util.c
  addchstr.c
  bkgd.c
  debug.c
  getch.c
  inchstr.c
  insstr.c
  mouse.c
  pad.c
  scanw.c
  termattr.c
  window.c
)
